[gd_scene load_steps=25 format=3 uid="uid://btm66kt8fge1g"]

[ext_resource type="Script" path="res://spiky/spiky.gd" id="1_fg7lh"]
[ext_resource type="Texture2D" uid="uid://bpol32qroukrn" path="res://spiky/spiky.png" id="2_l35p5"]
[ext_resource type="Texture2D" uid="uid://dqe6jwt3cmpvh" path="res://spiky/spiky-attack.png" id="3_c5syj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4fgbc"]
resource_name = "Material"
cull_mode = 2
vertex_color_use_as_albedo = true
roughness = 0.4

[sub_resource type="ArrayMesh" id="ArrayMesh_3bk3f"]
_surfaces = [{
"aabb": AABB(-1.83038, -0.668046, -1.94813, 3.66077, 3.05616, 3.75754),
"format": 4097,
"index_count": 156,
"index_data": PackedByteArray(8, 0, 10, 0, 0, 0, 10, 0, 17, 0, 12, 0, 10, 0, 8, 0, 17, 0, 2, 0, 17, 0, 8, 0, 17, 0, 7, 0, 12, 0, 17, 0, 2, 0, 7, 0, 3, 0, 13, 0, 6, 0, 3, 0, 9, 0, 13, 0, 6, 0, 7, 0, 2, 0, 6, 0, 13, 0, 7, 0, 4, 0, 11, 0, 1, 0, 4, 0, 14, 0, 11, 0, 14, 0, 3, 0, 11, 0, 14, 0, 9, 0, 3, 0, 1, 0, 15, 0, 5, 0, 1, 0, 11, 0, 15, 0, 5, 0, 8, 0, 0, 0, 5, 0, 15, 0, 8, 0, 15, 0, 2, 0, 8, 0, 15, 0, 6, 0, 2, 0, 11, 0, 6, 0, 15, 0, 11, 0, 3, 0, 6, 0, 16, 0, 0, 0, 10, 0, 16, 0, 5, 0, 0, 0, 4, 0, 5, 0, 16, 0, 4, 0, 1, 0, 5, 0, 10, 0, 24, 0, 18, 0, 24, 0, 12, 0, 27, 0, 24, 0, 10, 0, 12, 0, 27, 0, 20, 0, 24, 0, 20, 0, 12, 0, 7, 0, 20, 0, 27, 0, 12, 0, 21, 0, 13, 0, 9, 0, 21, 0, 23, 0, 13, 0, 23, 0, 7, 0, 13, 0, 23, 0, 20, 0, 7, 0, 4, 0, 25, 0, 14, 0, 4, 0, 19, 0, 25, 0, 14, 0, 21, 0, 9, 0, 14, 0, 25, 0, 21, 0, 19, 0, 26, 0, 25, 0, 19, 0, 22, 0, 26, 0, 22, 0, 24, 0, 26, 0, 22, 0, 18, 0, 24, 0, 26, 0, 20, 0, 23, 0, 26, 0, 24, 0, 20, 0, 25, 0, 23, 0, 21, 0, 25, 0, 26, 0, 23, 0, 16, 0, 18, 0, 22, 0, 16, 0, 10, 0, 18, 0, 4, 0, 22, 0, 19, 0, 4, 0, 16, 0, 22, 0),
"lods": [0.74179, PackedByteArray(8, 0, 18, 0, 0, 0, 18, 0, 8, 0, 17, 0, 24, 0, 18, 0, 17, 0, 16, 0, 0, 0, 18, 0, 16, 0, 5, 0, 0, 0, 16, 0, 18, 0, 22, 0, 2, 0, 17, 0, 8, 0, 17, 0, 2, 0, 20, 0, 17, 0, 20, 0, 24, 0, 23, 0, 20, 0, 13, 0, 6, 0, 13, 0, 20, 0, 6, 0, 20, 0, 2, 0, 9, 0, 13, 0, 6, 0, 9, 0, 23, 0, 13, 0, 19, 0, 15, 0, 5, 0, 19, 0, 9, 0, 15, 0, 9, 0, 6, 0, 15, 0, 19, 0, 22, 0, 26, 0, 19, 0, 26, 0, 9, 0, 9, 0, 26, 0, 23, 0, 5, 0, 8, 0, 0, 0, 5, 0, 15, 0, 8, 0, 15, 0, 2, 0, 8, 0, 15, 0, 6, 0, 2, 0, 19, 0, 5, 0, 16, 0, 19, 0, 16, 0, 22, 0, 22, 0, 24, 0, 26, 0, 22, 0, 18, 0, 24, 0, 26, 0, 20, 0, 23, 0, 26, 0, 24, 0, 20, 0)],
"name": "Material",
"primitive": 3,
"vertex_count": 28,
"vertex_data": PackedByteArray(1, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 191, 2, 0, 0, 63, 1, 0, 0, 191, 1, 0, 0, 191, 0, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 63, 0, 0, 0, 191, 1, 0, 0, 63, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 191, 255, 73, 234, 63, 0, 0, 0, 49, 97, 92, 249, 191, 0, 129, 183, 63, 6, 190, 98, 190, 158, 154, 231, 63, 0, 0, 0, 0, 165, 12, 28, 63, 165, 12, 28, 63, 164, 12, 28, 63, 164, 12, 28, 63, 0, 0, 0, 49, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 63, 0, 0, 0, 0, 164, 12, 28, 63, 164, 12, 28, 191, 164, 12, 28, 63, 164, 12, 28, 191, 0, 0, 0, 49, 0, 0, 0, 0, 212, 214, 24, 64, 83, 57, 149, 62, 0, 0, 0, 0, 0, 0, 160, 49, 226, 233, 86, 63, 0, 0, 0, 0, 23, 5, 43, 191, 0, 0, 192, 49, 226, 233, 86, 63, 0, 0, 0, 0, 0, 0, 32, 178, 0, 0, 0, 0, 0, 0, 0, 50, 226, 233, 86, 191, 210, 55, 94, 63, 231, 92, 13, 64, 159, 110, 134, 62, 1, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 191, 2, 0, 0, 191, 1, 0, 0, 191, 1, 0, 0, 191, 0, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 191, 0, 0, 0, 191, 1, 0, 0, 63, 255, 73, 234, 191, 0, 0, 0, 49, 97, 92, 249, 191, 0, 129, 183, 191, 6, 190, 98, 190, 158, 154, 231, 63, 164, 12, 28, 191, 164, 12, 28, 63, 0, 0, 0, 49, 164, 12, 28, 191, 164, 12, 28, 191, 0, 0, 0, 49, 226, 233, 86, 191, 0, 0, 0, 0, 0, 0, 32, 178, 210, 55, 94, 191, 231, 92, 13, 64, 159, 110, 134, 62)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_tv11n"]
resource_name = "spiky-5885495d3b2ff495c50e24337b0c9fa5_Cube"
_surfaces = [{
"aabb": AABB(-1.83038, -0.668046, -1.94813, 3.66077, 3.05616, 3.75754),
"attribute_data": PackedByteArray(71, 224, 51, 63, 124, 3, 31, 63, 71, 224, 51, 63, 124, 3, 31, 63, 237, 233, 25, 63, 216, 197, 158, 62, 42, 45, 90, 63, 25, 196, 104, 63, 208, 180, 194, 61, 180, 168, 52, 63, 208, 180, 194, 61, 180, 168, 52, 63, 4, 50, 219, 62, 188, 10, 54, 63, 4, 50, 219, 62, 188, 10, 54, 63, 56, 186, 90, 63, 74, 121, 193, 62, 157, 216, 166, 62, 152, 221, 38, 62, 24, 14, 235, 61, 60, 12, 9, 63, 24, 14, 235, 61, 60, 12, 9, 63, 10, 197, 97, 63, 133, 195, 122, 63, 96, 143, 167, 60, 72, 17, 55, 63, 96, 143, 167, 60, 72, 17, 55, 63, 10, 197, 97, 63, 133, 195, 122, 63, 133, 195, 122, 63, 112, 188, 22, 63, 51, 180, 79, 63, 0, 127, 221, 62, 176, 230, 145, 62, 132, 195, 122, 63, 177, 50, 53, 63, 104, 208, 6, 62, 209, 217, 230, 62, 64, 225, 208, 62, 248, 112, 15, 63, 134, 195, 122, 63, 177, 230, 145, 62, 148, 49, 169, 62, 56, 186, 90, 63, 84, 148, 5, 62, 85, 99, 179, 62, 82, 201, 50, 63, 85, 99, 179, 62, 82, 201, 50, 63, 85, 99, 179, 62, 82, 201, 50, 63, 85, 99, 179, 62, 82, 201, 50, 63, 246, 32, 65, 63, 40, 200, 41, 63, 24, 97, 229, 62, 86, 240, 35, 63, 133, 217, 38, 63, 156, 221, 171, 62, 110, 160, 86, 63, 22, 141, 200, 62, 135, 15, 181, 62, 64, 20, 195, 61, 64, 41, 54, 61, 70, 230, 1, 63, 64, 41, 54, 61, 70, 230, 1, 63, 135, 15, 181, 62, 64, 20, 195, 61, 70, 210, 29, 63, 172, 236, 36, 63, 70, 210, 29, 63, 172, 236, 36, 63, 70, 210, 29, 63, 172, 236, 36, 63, 70, 210, 29, 63, 172, 236, 36, 63, 24, 197, 213, 61, 188, 245, 30, 63, 24, 197, 213, 61, 188, 245, 30, 63, 24, 197, 213, 61, 188, 245, 30, 63, 24, 197, 213, 61, 188, 245, 30, 63, 139, 12, 217, 62, 44, 211, 229, 62, 236, 79, 45, 63, 132, 195, 122, 63, 236, 79, 45, 63, 132, 195, 122, 63, 139, 12, 217, 62, 44, 211, 229, 62, 208, 217, 230, 62, 96, 226, 231, 61, 156, 216, 166, 62, 114, 109, 76, 63, 156, 216, 166, 62, 114, 109, 76, 63, 208, 217, 230, 62, 96, 226, 231, 61, 32, 13, 207, 60, 130, 77, 28, 63, 32, 13, 207, 60, 130, 77, 28, 63, 32, 13, 207, 60, 130, 77, 28, 63, 32, 13, 207, 60, 130, 77, 28, 63, 104, 101, 83, 62, 36, 199, 33, 63, 177, 50, 53, 63, 22, 141, 200, 62, 104, 101, 83, 62, 36, 199, 33, 63, 168, 171, 63, 63, 88, 14, 168, 62, 133, 195, 122, 63, 39, 234, 115, 63, 238, 233, 25, 63, 224, 150, 8, 63, 238, 233, 25, 63, 224, 150, 8, 63, 133, 195, 122, 63, 39, 234, 115, 63, 51, 180, 79, 63, 52, 240, 109, 63, 247, 112, 15, 63, 204, 120, 250, 62, 237, 233, 25, 63, 216, 197, 158, 62, 71, 224, 51, 63, 124, 3, 31, 63, 71, 224, 51, 63, 124, 3, 31, 63, 208, 180, 194, 61, 180, 168, 52, 63, 208, 180, 194, 61, 180, 168, 52, 63, 42, 45, 90, 63, 25, 196, 104, 63, 56, 186, 90, 63, 74, 121, 193, 62, 4, 50, 219, 62, 188, 10, 54, 63, 4, 50, 219, 62, 188, 10, 54, 63, 24, 14, 235, 61, 60, 12, 9, 63, 24, 14, 235, 61, 60, 12, 9, 63, 157, 216, 166, 62, 152, 221, 38, 62, 176, 230, 145, 62, 132, 195, 122, 63, 177, 50, 53, 63, 104, 208, 6, 62, 51, 180, 79, 63, 0, 127, 221, 62, 133, 195, 122, 63, 112, 188, 22, 63, 56, 186, 90, 63, 84, 148, 5, 62, 177, 230, 145, 62, 148, 49, 169, 62, 248, 112, 15, 63, 134, 195, 122, 63, 209, 217, 230, 62, 64, 225, 208, 62, 110, 160, 86, 63, 22, 141, 200, 62, 133, 217, 38, 63, 156, 221, 171, 62, 24, 97, 229, 62, 86, 240, 35, 63, 246, 32, 65, 63, 40, 200, 41, 63, 24, 197, 213, 61, 188, 245, 30, 63, 24, 197, 213, 61, 188, 245, 30, 63, 24, 197, 213, 61, 188, 245, 30, 63, 24, 197, 213, 61, 188, 245, 30, 63, 168, 171, 63, 63, 88, 14, 168, 62, 104, 101, 83, 62, 36, 199, 33, 63, 104, 101, 83, 62, 36, 199, 33, 63, 177, 50, 53, 63, 22, 141, 200, 62, 247, 112, 15, 63, 204, 120, 250, 62, 51, 180, 79, 63, 52, 240, 109, 63, 71, 224, 51, 63, 124, 3, 31, 63, 4, 50, 219, 62, 188, 10, 54, 63, 176, 230, 145, 62, 132, 195, 122, 63, 64, 41, 54, 61, 70, 230, 1, 63, 64, 41, 54, 61, 70, 230, 1, 63, 208, 217, 230, 62, 96, 226, 231, 61, 104, 101, 83, 62, 36, 199, 33, 63, 51, 180, 79, 63, 52, 240, 109, 63, 247, 112, 15, 63, 204, 120, 250, 62, 71, 224, 51, 63, 124, 3, 31, 63, 208, 180, 194, 61, 180, 168, 52, 63, 4, 50, 219, 62, 188, 10, 54, 63, 177, 230, 145, 62, 148, 49, 169, 62),
"format": 4119,
"index_count": 156,
"index_data": PackedByteArray(28, 0, 39, 0, 1, 0, 39, 0, 64, 0, 46, 0, 39, 0, 28, 0, 64, 0, 7, 0, 65, 0, 29, 0, 65, 0, 27, 0, 47, 0, 65, 0, 7, 0, 27, 0, 9, 0, 48, 0, 20, 0, 9, 0, 32, 0, 48, 0, 21, 0, 25, 0, 6, 0, 21, 0, 49, 0, 25, 0, 14, 0, 41, 0, 4, 0, 14, 0, 55, 0, 41, 0, 54, 0, 10, 0, 40, 0, 54, 0, 34, 0, 10, 0, 5, 0, 56, 0, 18, 0, 5, 0, 42, 0, 56, 0, 19, 0, 30, 0, 2, 0, 19, 0, 57, 0, 30, 0, 59, 0, 8, 0, 31, 0, 59, 0, 23, 0, 8, 0, 43, 0, 22, 0, 58, 0, 43, 0, 11, 0, 22, 0, 61, 0, 0, 0, 37, 0, 61, 0, 17, 0, 0, 0, 12, 0, 16, 0, 60, 0, 12, 0, 3, 0, 16, 0, 36, 0, 89, 0, 67, 0, 89, 0, 45, 0, 99, 0, 89, 0, 36, 0, 45, 0, 98, 0, 73, 0, 88, 0, 73, 0, 44, 0, 24, 0, 73, 0, 98, 0, 44, 0, 77, 0, 51, 0, 35, 0, 77, 0, 85, 0, 51, 0, 84, 0, 26, 0, 50, 0, 84, 0, 74, 0, 26, 0, 13, 0, 92, 0, 52, 0, 13, 0, 70, 0, 92, 0, 53, 0, 76, 0, 33, 0, 53, 0, 93, 0, 76, 0, 69, 0, 96, 0, 91, 0, 69, 0, 78, 0, 96, 0, 79, 0, 87, 0, 97, 0, 79, 0, 66, 0, 87, 0, 94, 0, 72, 0, 82, 0, 94, 0, 86, 0, 72, 0, 90, 0, 83, 0, 75, 0, 90, 0, 95, 0, 83, 0, 62, 0, 68, 0, 80, 0, 62, 0, 38, 0, 68, 0, 15, 0, 81, 0, 71, 0, 15, 0, 63, 0, 81, 0),
"lods": [0.74179, PackedByteArray(28, 0, 109, 0, 100, 0, 109, 0, 28, 0, 107, 0, 89, 0, 109, 0, 107, 0, 61, 0, 100, 0, 109, 0, 61, 0, 17, 0, 100, 0, 61, 0, 109, 0, 80, 0, 101, 0, 108, 0, 29, 0, 108, 0, 101, 0, 111, 0, 108, 0, 111, 0, 88, 0, 84, 0, 111, 0, 49, 0, 21, 0, 49, 0, 111, 0, 21, 0, 111, 0, 6, 0, 32, 0, 105, 0, 20, 0, 32, 0, 85, 0, 105, 0, 110, 0, 106, 0, 102, 0, 110, 0, 103, 0, 106, 0, 103, 0, 22, 0, 106, 0, 110, 0, 78, 0, 95, 0, 110, 0, 95, 0, 104, 0, 104, 0, 95, 0, 112, 0, 19, 0, 30, 0, 2, 0, 19, 0, 57, 0, 30, 0, 59, 0, 8, 0, 31, 0, 59, 0, 23, 0, 8, 0, 71, 0, 16, 0, 60, 0, 71, 0, 60, 0, 81, 0, 79, 0, 87, 0, 97, 0, 79, 0, 66, 0, 87, 0, 94, 0, 72, 0, 82, 0, 94, 0, 86, 0, 72, 0)],
"material": SubResource("StandardMaterial3D_4fgbc"),
"name": "Material",
"primitive": 3,
"vertex_count": 113,
"vertex_data": PackedByteArray(1, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 191, 145, 55, 23, 236, 3, 234, 31, 209, 1, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 191, 127, 228, 5, 225, 71, 216, 172, 191, 1, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 191, 104, 183, 26, 183, 174, 152, 34, 170, 2, 0, 0, 63, 1, 0, 0, 191, 1, 0, 0, 191, 145, 55, 231, 19, 190, 53, 253, 241, 2, 0, 0, 63, 1, 0, 0, 191, 1, 0, 0, 191, 50, 160, 25, 16, 190, 230, 210, 199, 2, 0, 0, 63, 1, 0, 0, 191, 1, 0, 0, 191, 104, 183, 228, 72, 157, 184, 51, 222, 0, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 63, 246, 111, 211, 182, 37, 227, 168, 204, 0, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 63, 111, 165, 101, 134, 174, 252, 59, 171, 0, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 63, 242, 202, 194, 187, 27, 113, 218, 206, 1, 0, 0, 63, 0, 0, 0, 191, 1, 0, 0, 63, 178, 103, 150, 71, 121, 102, 90, 218, 1, 0, 0, 63, 0, 0, 0, 191, 1, 0, 0, 63, 24, 144, 50, 32, 18, 227, 52, 201, 1, 0, 0, 63, 0, 0, 0, 191, 1, 0, 0, 63, 97, 201, 120, 58, 141, 181, 115, 217, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 191, 145, 55, 231, 19, 190, 53, 253, 241, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 191, 204, 95, 25, 16, 236, 25, 78, 56, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 191, 50, 160, 25, 16, 18, 230, 176, 199, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 191, 109, 200, 231, 19, 64, 202, 1, 14, 255, 73, 234, 63, 0, 0, 0, 49, 97, 92, 249, 191, 145, 55, 231, 19, 190, 53, 253, 241, 255, 73, 234, 63, 0, 0, 0, 49, 97, 92, 249, 191, 145, 55, 23, 236, 147, 241, 72, 209, 255, 73, 234, 63, 0, 0, 0, 49, 97, 92, 249, 191, 104, 183, 228, 72, 62, 186, 160, 222, 255, 73, 234, 63, 0, 0, 0, 49, 97, 92, 249, 191, 104, 183, 26, 183, 11, 195, 19, 159, 0, 129, 183, 63, 6, 190, 98, 190, 158, 154, 231, 63, 178, 103, 150, 71, 121, 102, 90, 218, 0, 129, 183, 63, 6, 190, 98, 190, 158, 154, 231, 63, 246, 111, 211, 182, 37, 227, 168, 204, 0, 129, 183, 63, 6, 190, 98, 190, 158, 154, 231, 63, 97, 201, 120, 58, 122, 186, 0, 222, 0, 129, 183, 63, 6, 190, 98, 190, 158, 154, 231, 63, 242, 202, 194, 187, 190, 109, 149, 208, 0, 0, 0, 0, 165, 12, 28, 63, 165, 12, 28, 63, 143, 90, 101, 134, 152, 4, 43, 85, 0, 0, 0, 0, 165, 12, 28, 63, 165, 12, 28, 63, 246, 111, 211, 182, 37, 227, 168, 204, 0, 0, 0, 0, 165, 12, 28, 63, 165, 12, 28, 63, 8, 144, 211, 182, 217, 28, 86, 51, 0, 0, 0, 0, 165, 12, 28, 63, 165, 12, 28, 63, 111, 165, 101, 134, 192, 255, 202, 211, 164, 12, 28, 63, 164, 12, 28, 63, 0, 0, 0, 49, 127, 228, 5, 225, 71, 216, 172, 191, 164, 12, 28, 63, 164, 12, 28, 63, 0, 0, 0, 49, 111, 165, 101, 134, 225, 93, 105, 21, 164, 12, 28, 63, 164, 12, 28, 63, 0, 0, 0, 49, 104, 183, 26, 183, 9, 194, 86, 159, 164, 12, 28, 63, 164, 12, 28, 63, 0, 0, 0, 49, 242, 202, 194, 187, 198, 119, 107, 203, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 63, 178, 103, 150, 71, 121, 102, 90, 218, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 63, 230, 111, 50, 32, 37, 30, 202, 54, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 63, 24, 144, 50, 32, 217, 225, 52, 201, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 63, 76, 152, 150, 71, 133, 153, 164, 37, 0, 0, 0, 0, 164, 12, 28, 63, 164, 12, 28, 191, 127, 27, 5, 225, 183, 39, 82, 64, 0, 0, 0, 0, 164, 12, 28, 63, 164, 12, 28, 191, 145, 55, 23, 236, 158, 218, 107, 209, 0, 0, 0, 0, 164, 12, 28, 63, 164, 12, 28, 191, 109, 200, 23, 236, 96, 37, 147, 46, 0, 0, 0, 0, 164, 12, 28, 63, 164, 12, 28, 191, 127, 228, 5, 225, 71, 216, 172, 191, 164, 12, 28, 63, 164, 12, 28, 191, 0, 0, 0, 49, 24, 144, 50, 32, 81, 228, 52, 201, 164, 12, 28, 63, 164, 12, 28, 191, 0, 0, 0, 49, 50, 160, 25, 16, 18, 230, 176, 199, 164, 12, 28, 63, 164, 12, 28, 191, 0, 0, 0, 49, 104, 183, 228, 72, 191, 181, 116, 221, 164, 12, 28, 63, 164, 12, 28, 191, 0, 0, 0, 49, 97, 201, 120, 58, 166, 186, 41, 222, 0, 0, 0, 0, 212, 214, 24, 64, 83, 57, 149, 62, 143, 90, 101, 134, 49, 8, 62, 41, 0, 0, 0, 0, 212, 214, 24, 64, 83, 57, 149, 62, 127, 27, 5, 225, 183, 39, 82, 64, 0, 0, 0, 0, 212, 214, 24, 64, 83, 57, 149, 62, 127, 228, 5, 225, 71, 216, 172, 191, 0, 0, 0, 0, 212, 214, 24, 64, 83, 57, 149, 62, 111, 165, 101, 134, 109, 246, 67, 215, 0, 0, 0, 0, 0, 0, 160, 49, 226, 233, 86, 63, 178, 103, 150, 71, 121, 102, 90, 218, 0, 0, 0, 0, 0, 0, 160, 49, 226, 233, 86, 63, 246, 111, 211, 182, 37, 227, 168, 204, 0, 0, 0, 0, 0, 0, 160, 49, 226, 233, 86, 63, 8, 144, 211, 182, 217, 28, 86, 51, 0, 0, 0, 0, 0, 0, 160, 49, 226, 233, 86, 63, 76, 152, 150, 71, 133, 153, 164, 37, 0, 0, 0, 0, 23, 5, 43, 191, 0, 0, 192, 49, 204, 95, 25, 16, 109, 26, 104, 56, 0, 0, 0, 0, 23, 5, 43, 191, 0, 0, 192, 49, 230, 111, 50, 32, 236, 28, 202, 54, 0, 0, 0, 0, 23, 5, 43, 191, 0, 0, 192, 49, 24, 144, 50, 32, 18, 227, 52, 201, 0, 0, 0, 0, 23, 5, 43, 191, 0, 0, 192, 49, 50, 160, 25, 16, 145, 229, 150, 199, 226, 233, 86, 63, 0, 0, 0, 0, 0, 0, 32, 178, 104, 183, 228, 72, 170, 184, 55, 222, 226, 233, 86, 63, 0, 0, 0, 0, 0, 0, 32, 178, 104, 183, 26, 183, 251, 213, 48, 154, 226, 233, 86, 63, 0, 0, 0, 0, 0, 0, 32, 178, 97, 201, 120, 58, 166, 188, 2, 224, 226, 233, 86, 63, 0, 0, 0, 0, 0, 0, 32, 178, 242, 202, 194, 187, 13, 113, 225, 206, 0, 0, 0, 0, 0, 0, 0, 50, 226, 233, 86, 191, 145, 55, 231, 19, 190, 53, 253, 241, 0, 0, 0, 0, 0, 0, 0, 50, 226, 233, 86, 191, 145, 55, 23, 236, 176, 234, 35, 209, 0, 0, 0, 0, 0, 0, 0, 50, 226, 233, 86, 191, 109, 200, 23, 236, 78, 21, 219, 46, 0, 0, 0, 0, 0, 0, 0, 50, 226, 233, 86, 191, 109, 200, 231, 19, 64, 202, 1, 14, 210, 55, 94, 63, 231, 92, 13, 64, 159, 110, 134, 62, 127, 228, 5, 225, 71, 216, 172, 191, 210, 55, 94, 63, 231, 92, 13, 64, 159, 110, 134, 62, 111, 165, 101, 134, 150, 248, 117, 214, 1, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 191, 150, 72, 26, 183, 80, 103, 220, 85, 1, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 191, 127, 27, 5, 225, 183, 39, 82, 64, 1, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 191, 109, 200, 23, 236, 251, 21, 223, 46, 2, 0, 0, 191, 1, 0, 0, 191, 1, 0, 0, 191, 150, 72, 228, 72, 97, 71, 203, 33, 2, 0, 0, 191, 1, 0, 0, 191, 1, 0, 0, 191, 204, 95, 25, 16, 64, 25, 44, 56, 2, 0, 0, 191, 1, 0, 0, 191, 1, 0, 0, 191, 109, 200, 231, 19, 64, 202, 1, 14, 0, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 63, 12, 53, 194, 187, 227, 142, 36, 49, 0, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 63, 143, 90, 101, 134, 39, 0, 192, 83, 0, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 63, 8, 144, 211, 182, 217, 28, 86, 51, 1, 0, 0, 191, 0, 0, 0, 191, 1, 0, 0, 63, 157, 54, 120, 58, 113, 74, 139, 38, 1, 0, 0, 191, 0, 0, 0, 191, 1, 0, 0, 63, 230, 111, 50, 32, 236, 28, 202, 54, 1, 0, 0, 191, 0, 0, 0, 191, 1, 0, 0, 63, 76, 152, 150, 71, 133, 153, 164, 37, 255, 73, 234, 191, 0, 0, 0, 49, 97, 92, 249, 191, 150, 72, 228, 72, 192, 69, 94, 33, 255, 73, 234, 191, 0, 0, 0, 49, 97, 92, 249, 191, 150, 72, 26, 183, 243, 60, 235, 96, 255, 73, 234, 191, 0, 0, 0, 49, 97, 92, 249, 191, 109, 200, 23, 236, 107, 14, 182, 46, 255, 73, 234, 191, 0, 0, 0, 49, 97, 92, 249, 191, 109, 200, 231, 19, 64, 202, 1, 14, 0, 129, 183, 191, 6, 190, 98, 190, 158, 154, 231, 63, 12, 53, 194, 187, 64, 146, 105, 47, 0, 129, 183, 191, 6, 190, 98, 190, 158, 154, 231, 63, 157, 54, 120, 58, 132, 69, 254, 33, 0, 129, 183, 191, 6, 190, 98, 190, 158, 154, 231, 63, 8, 144, 211, 182, 217, 28, 86, 51, 0, 129, 183, 191, 6, 190, 98, 190, 158, 154, 231, 63, 76, 152, 150, 71, 133, 153, 164, 37, 164, 12, 28, 191, 164, 12, 28, 63, 0, 0, 0, 49, 12, 53, 194, 187, 56, 136, 147, 52, 164, 12, 28, 191, 164, 12, 28, 63, 0, 0, 0, 49, 150, 72, 26, 183, 245, 61, 168, 96, 164, 12, 28, 191, 164, 12, 28, 63, 0, 0, 0, 49, 143, 90, 101, 134, 29, 162, 149, 234, 164, 12, 28, 191, 164, 12, 28, 63, 0, 0, 0, 49, 127, 27, 5, 225, 183, 39, 82, 64, 164, 12, 28, 191, 164, 12, 28, 191, 0, 0, 0, 49, 157, 54, 120, 58, 88, 69, 213, 33, 164, 12, 28, 191, 164, 12, 28, 191, 0, 0, 0, 49, 150, 72, 228, 72, 63, 74, 138, 34, 164, 12, 28, 191, 164, 12, 28, 191, 0, 0, 0, 49, 204, 95, 25, 16, 236, 25, 78, 56, 164, 12, 28, 191, 164, 12, 28, 191, 0, 0, 0, 49, 230, 111, 50, 32, 173, 27, 202, 54, 226, 233, 86, 191, 0, 0, 0, 0, 0, 0, 32, 178, 12, 53, 194, 187, 241, 142, 29, 49, 226, 233, 86, 191, 0, 0, 0, 0, 0, 0, 32, 178, 157, 54, 120, 58, 88, 67, 252, 31, 226, 233, 86, 191, 0, 0, 0, 0, 0, 0, 32, 178, 150, 72, 228, 72, 84, 71, 199, 33, 226, 233, 86, 191, 0, 0, 0, 0, 0, 0, 32, 178, 150, 72, 26, 183, 3, 42, 206, 101, 210, 55, 94, 191, 231, 92, 13, 64, 159, 110, 134, 62, 143, 90, 101, 134, 229, 10, 60, 40, 210, 55, 94, 191, 231, 92, 13, 64, 159, 110, 134, 62, 127, 27, 5, 225, 183, 39, 82, 64, 1, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 191, 235, 54, 191, 251, 3, 234, 31, 209, 0, 0, 0, 63, 1, 0, 0, 63, 1, 0, 0, 63, 77, 160, 194, 134, 37, 227, 168, 204, 255, 73, 234, 63, 0, 0, 0, 49, 97, 92, 249, 191, 67, 175, 57, 8, 62, 186, 160, 222, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 63, 210, 166, 69, 35, 37, 30, 202, 54, 0, 0, 0, 0, 164, 12, 28, 191, 164, 12, 28, 63, 25, 89, 107, 45, 37, 30, 202, 54, 0, 0, 0, 0, 0, 0, 160, 49, 226, 233, 86, 63, 255, 127, 94, 58, 121, 102, 90, 218, 226, 233, 86, 63, 0, 0, 0, 0, 0, 0, 32, 178, 109, 176, 40, 40, 170, 184, 55, 222, 210, 55, 94, 63, 231, 92, 13, 64, 159, 110, 134, 62, 155, 221, 85, 249, 71, 216, 172, 191, 210, 55, 94, 63, 231, 92, 13, 64, 159, 110, 134, 62, 121, 144, 224, 135, 150, 248, 117, 214, 1, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 191, 13, 207, 195, 255, 183, 39, 82, 64, 2, 0, 0, 191, 1, 0, 0, 191, 1, 0, 0, 191, 156, 93, 227, 30, 97, 71, 203, 33, 0, 0, 0, 191, 1, 0, 0, 63, 1, 0, 0, 63, 22, 118, 246, 169, 39, 0, 192, 83, 0, 129, 183, 191, 6, 190, 98, 190, 158, 154, 231, 63, 161, 65, 53, 55, 132, 69, 254, 33)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_3bk3f")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hsriw"]
albedo_texture = ExtResource("2_l35p5")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bqsqj"]
radius = 0.7

[sub_resource type="CylinderShape3D" id="CylinderShape3D_20gfl"]
height = 0.7
radius = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7lubb"]
radius = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_l5v50"]
atlas = ExtResource("3_c5syj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnvks"]
atlas = ExtResource("3_c5syj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mrxr"]
atlas = ExtResource("3_c5syj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvc3v"]
atlas = ExtResource("3_c5syj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gujp6"]
atlas = ExtResource("3_c5syj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntrjq"]
atlas = ExtResource("3_c5syj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vuaw"]
atlas = ExtResource("3_c5syj")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgm1j"]
atlas = ExtResource("3_c5syj")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv7wk"]
atlas = ExtResource("3_c5syj")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6qit"]
atlas = ExtResource("3_c5syj")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx4mb"]
atlas = ExtResource("3_c5syj")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8jkh"]
atlas = ExtResource("3_c5syj")
region = Rect2(704, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wad13"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5v50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnvks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mrxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvc3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gujp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntrjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vuaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgm1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv7wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6qit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx4mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8jkh")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_khw2v"]
radius = 3.8

[node name="spiky" type="CharacterBody3D" groups=["monsters"]]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_fg7lh")

[node name="Cube" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("ArrayMesh_tv11n")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_hsriw")

[node name="HeadCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.52148, 0)
shape = SubResource("CylinderShape3D_bqsqj")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.937966, -0.26837)
shape = SubResource("CylinderShape3D_20gfl")

[node name="FlameCooldown" type="Timer" parent="."]

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_7lubb")

[node name="TwirlAttack" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.903005, 0)
visible = false
pixel_size = 0.15
sprite_frames = SubResource("SpriteFrames_wad13")

[node name="TwirlCooldown" type="Timer" parent="."]
wait_time = 6.267
one_shot = true

[node name="TwirlHitBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TwirlHitBox"]
shape = SubResource("CylinderShape3D_khw2v")

[connection signal="timeout" from="FlameCooldown" to="." method="_on_flame_cooldown_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="animation_finished" from="TwirlAttack" to="." method="_on_twirl_attack_animation_finished"]
[connection signal="body_entered" from="TwirlHitBox" to="." method="_on_twirl_hit_box_body_entered"]
